# rimmanager

./: Cargo.toml  readme.md
.github/workflows/: build_test.yml  master_release.yml  tag_release.yml  windows_master_release.yml
data/: default-mod-rules.ruledb
src/: main.rs  managment.rs  ui.rs  xml.rs
