[package]
name = "rimmanager"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
egui = "0.25"
eframe = "0.25"
egui_dnd = "0.6"
egui_file = "0.14"
egui-modal = "0.3"
egui_extras = { version = "0.25", features = ["file", "image"] }
image = { version = "0.24", features = ["png"] }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.5"
log = "0.4"
env_logger = "0.11"
indexmap = { version = "2.2", features = ["serde"] }
home = "0.5"
anyhow = "1.0"
url = { version = "2.5", features = ["serde"] }
versions = "6.1"
itertools = "0.12"
homedir = "0.2"
fontdb = "0.16"
toml = "0.8"